--- a/Source/annotations/HorseIntensiveDelphi2020_Annotation.dproj
+++ b/Source/annotations/HorseIntensiveDelphi2020_Annotation.dproj
@@ -90,7 +90,7 @@
         </DelphiCompile>
         <DCCReference Include="..\model\Model.Error.pas"/>
         <DCCReference Include="..\model\Model.User.pas"/>
-        <DCCReference Include="Annotation.Controller.User.pas"/>
+        <DCCReference Include="Controller.User.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
